--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "sass": "^1.71.0",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vite-svg-loader": "^5.1.0",
     "vitest": "^1.2.2",
